this repo being given a real purpose

--- a/index.html
+++ b/index.html
@@ -1,4 +1,82 @@
 <!DOCTYPE html>
 <html>
-    Hello world
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-screen, initial-scale=1.0">
+    <title>ZilchofNowhere @ GitHub</title>
+    <style>
+        html {
+          font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica', sans-serif;
+          margin: 20px;
+          margin-left: 40px;
+          background-color: lightblue;
+        }
+        h2 {
+          text-align: center;
+        }
+        .expl {
+          display: inline;
+          font-weight: 600;
+        }
+        a {
+          text-decoration: none;
+          color: black;
+        }
+        .site-list {
+          display: inline-block;
+          padding-left: auto;
+          padding-right: 25px;
+          padding-top: 15px;
+          border-radius: 4px;
+          background-color: deepskyblue;
+        }
+        footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          text-align: center;
+        }
+        hr {
+          border: 1px solid black;
+        }
+    </style>
+  </head>
+  <body>
+    <h2>
+      Welcome to <a href="https://github.com/zilchofnowhere">ZilchofNowhere's main web page!</a>
+    </h2>
+    <p class="expl">Here are some links that lead to my repos.</p>
+    <br><br>
+    <nav class="site-list">
+      <h3 style="text-decoration: underline; text-align: center; margin: -6px auto;">
+        Sites
+      </h3>
+      <ul>
+        <li>
+          <a href="/webdesign" title="webdesign">Web Design</a><br>
+        </li>
+        <li>
+          <a href="https://github.com/ZilchofNowhere/Esclave" title="A Discord bot written in JS">
+            Esclave
+          </a><br>
+        </li>
+        <li>
+          <a href="https://github.com/ZilchofNowhere/little-useful-programs" title="A collection of various multi-purpose programs, mostly for fun.">
+            Little Useful Programs
+          </a><br>
+        </li>
+      </ul>
+    </nav>
+    <footer>
+      <hr>
+      <p>
+        <sub>
+          <i style="text-decoration: underline;">zilchofnowhere.github.io</i><sup style="font-size: 7pt;">TM</sup> is a personal site that hopes that it is simple enough to not be ripped off.
+          <br>
+          All rights reserved. © 2021
+        </sub>
+      </p>
+    </footer>
+  </body>
 </html>
