--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <h2>
-      Welcome to <a href="https://github.com/zilchofnowhere">ZilchofNowhere's main web page!</a>
+      Welcome to <a href="https://github.com/zilchofnowhere">ZilchofNowhere</a>'s main web page!
     </h2>
     <p class="expl">Here are some links that lead to my repos.</p>
     <br><br>
