--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
           </a><br>
         </li>
         <li>
+          <a href="www.zonw.tk" title="A general-purpose site of mine">
+            zonw.tk
+          </a><br>
+        </li>
+        <li>
           <a href="https://github.com/ZilchofNowhere/little-useful-programs" title="A collection of various multi-purpose programs, mostly for fun.">
             Little Useful Programs
           </a><br>
