--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             Little Useful Programs
           </a><br>
         </li>
+        <li>
+          <a href="https://github.com/ZilchofNowhere/fcc-webdev-course" title="Final projects of the tutorial chapters of freeCodeCamp Responsive Web Development Course">freeCodeCamp WebDev Course Projects</a>
+        </li>
       </ul>
     </nav>
     <footer>
