--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </a><br>
         </li>
         <li>
-          <a href="https://github.com/ZilchofNowhere/fcc-webdev-course" title="Final projects of the tutorial chapters of freeCodeCamp Responsive Web Development Course">freeCodeCamp WebDev Course Projects</a>
+          <a href="/fcc-webdev-course" title="Final projects of the tutorial chapters of freeCodeCamp Responsive Web Development Course">freeCodeCamp WebDev Course Projects</a>
         </li>
       </ul>
     </nav>
